Fix game tile ribbon width and text alignment

--- a/assets/sass/components/_game-lobby.scss
+++ b/assets/sass/components/_game-lobby.scss
@@ -13,9 +13,7 @@
 
     .game-ribbon {
         top: 0;
-        width: 62px;
         max-height: 98px;
-        text-align: center;
         font: Medium 20px/24px Roboto;
         letter-spacing: 0;
         opacity: 1;
